Completed the implementation of the core service layer by adding the VisitService and SpecialtyService. Commit also includes significant refactoring and bug fixes for the integration test suite.
Key Changes:
• Visit Service:
     - Added the final and most central service, VisitServiceImpl, which handles the creation and management of visits and their child entities (Treatment, SickLeave).
     - Implemented business logic to validate patient insurance status and check for visit time conflicts before scheduling.
     - Ensured all required reporting methods are included.

• Specialty Service:
     - Created a new SpecialtyService to provide full administrative CRUD functionality for managing medical specialties.
     - Added logic to prevent the deletion of a specialty if it is still in use by any doctor, throwing a new EntityInUseException.

• Integration Test Refactoring:
     - Refactored the setUp methods in all integration test classes (DiagnosisServiceImplIntegrationTests, VisitServiceImplIntegrationTests, etc.) to be idempotent.
     - The tests now use a "find or create" (orElseGet) strategy for shared test data. This permanently fixes the Duplicate entry errors that were occurring when a test using @TestTransaction was followed by a standard transactional test.
• Bug Fixes & Fine-Tuning:
     - Fixed a compilation error in VisitServiceImpl by correctly overloading a helper method to handle both Create and Update DTOs.
     - Fixed a lazy-loading bug in SpecialtyServiceImpl by adding a dedicated repository method (existsBySpecialtiesContains) to check if a specialty is in use.
     - Added missing unit and integration tests for the new repository method.
     - Corrected a compilation error in the DoctorRepositoryIntegrationTests by using the correct DTO getter.
     - Centralized validation constants and messages for visit working hours by updating ValidationConfig and ExceptionMessages.